# RR32CanLibrary

./: .gitignore  CHANGES.md  CMakeLists.txt  CMakeLists.txt.in  CMakePresets.json  README.md  apply-clang.sh  library.json
.github/workflows/: main.yml  wintest.yml
lib/RR32Can/: Constants.cpp  Constants.h  LocoConsumer.cpp  LocoConsumer.h  LocoListConsumer.cpp  LocoListConsumer.h  Locomotive.cpp  Locomotive.h  Station.cpp  Station.h  StationCbk.h  StationTxCbk.h  StlAdapter.h  Types.cpp  Types.h  _RR32Can_config.h  library.json
lib/RR32Can/callback/: AccessoryCbk.h  ConfigDataCbk.h  EngineCbk.h  SystemCbk.h  TxCbk.h
lib/RR32Can/messages/: BaseMessage.cpp  BaseMessage.h  CanFrame.h  Data.cpp  Data.h  Identifier.cpp  Identifier.h  S88Event.cpp  S88Event.h  SystemMessage.cpp  SystemMessage.h  TurnoutPacket.cpp  TurnoutPacket.h
lib/RR32Can/types/: BaseTypes.h  LocomotiveTypes.cpp  LocomotiveTypes.h  TurnoutTypes.cpp  TurnoutTypes.h
lib/RR32Can/util/: BufferManager.cpp  BufferManager.h  ConfigDataStreamParser.cpp  ConfigDataStreamParser.h  TextParser.cpp  TextParser.h  constexpr.h  utils.h
lib/RR32CanEngineDb/: LocoConsumer.cpp  LocoConsumer.h  LocoListConsumer.cpp  LocoListConsumer.h  library.json
lib/RR32CanEngineDb/util/: BufferManager.cpp  BufferManager.h  ConfigDataConsumer.h  ConfigDataEndStreamCallback.h  ConfigDataStreamParser.cpp  ConfigDataStreamParser.h  Crc.cpp  Crc.h  TextParser.cpp  TextParser.h
test/: config.h
test/RR32Can/: BufferManagerTest.cpp  ConstantsTest.cpp  CrcTest.cpp  MessagesTest.cpp  TextParserTest.cpp  TypesTest.cpp
test/data/: ConfigData.cpp  ConfigData.h
test/integration/: EngineLibraryTest.cpp  StationTest.cpp
test/mocks/: Mocks.h
